--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -30,7 +30,7 @@
       <div class="login_wrapper">
         <div class="animate form login_form">
           <section class="login_content">
-            <form action="user/login" method="post">
+            <form id="form" method="post">
               <h1>学生社团管理系统</h1>
               <div>
                 <input type="text" class="form-control" placeholder="账号" required=""  name="username"/>
@@ -39,14 +39,14 @@
                 <input type="password" class="form-control" placeholder="密码" required="" name="password"/>
               </div>
               <div>
-                <button class="btn btn-default submit" type="submit">登录</button>
+                <button class="btn btn-default submit" id="submit_button" type="button">登录</button>
                 <a class="reset_pass" href="#">忘记密码？</a>
               </div>
 
               <div class="clearfix"></div>
 
               <div class="separator">
-                
+
 
                 <div class="clearfix"></div>
                 <br />
@@ -62,6 +62,9 @@
 
       </div>
     </div>
+
     <script type="text/javascript" src="vendors/jquery/dist/jquery.min.js" ></script>
+		<script type="text/javascript" src="js/vue/vue.js" ></script>
+		<script type="text/javascript" src="js/login.js" ></script>
   </body>
 </html>
