--- a/src/main/resources/static/pages/index_student.html
+++ b/src/main/resources/static/pages/index_student.html
@@ -356,7 +356,7 @@
     <script src="vendors/pdfmake/build/pdfmake.min.js"></script>
     <script src="vendors/pdfmake/build/vfs_fonts.js"></script>
 		<!--Vue-->
-		<script type="text/javascript" src="../js/vue/vue.min.js" ></script>
+		<script type="text/javascript" src="../build/js/vue/vue.min.js" ></script>
     <!-- Custom Theme Scripts -->
     <script src="build/js/custom.min.js"></script>
 
