--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -64,7 +64,7 @@
     </div>
 
     <script type="text/javascript" src="vendors/jquery/dist/jquery.min.js" ></script>
-		<script type="text/javascript" src="js/vue/vue.js" ></script>
-		<script type="text/javascript" src="js/login.js" ></script>
+		<script type="text/javascript" src="build/js/vue/vue.js" ></script>
+		<script type="text/javascript" src="build/js/login.js" ></script>
   </body>
 </html>
