--- a/src/main/resources/static/pages/index_admin.html
+++ b/src/main/resources/static/pages/index_admin.html
@@ -1016,6 +1016,7 @@
 
     <!-- Custom Theme Scripts -->
     <script src="build/js/custom.min.js"></script>
+    <script type="text/javascript" src="build/js/admin.js" ></script>
 
   </body>
 </html>
