--- a/src/main/resources/static/pages/index_student.html
+++ b/src/main/resources/static/pages/index_student.html
@@ -277,8 +277,8 @@
 
 
                       <tbody>
-                        <tr>
-                          <td>跆拳道入门</td>
+                        <tr v-for="data in datas">
+                          <td>{{ data.courseName }}</td>
                           <td>体育运动</td>
                           <td>跆拳道社</td>
                           <td>李四</td>
@@ -337,7 +337,7 @@
     <script src="vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
     <script src="vendors/nprogress/nprogress.js"></script>
-    <!-- iCheck -->
+    <!-- iCheck --> 
     <script src="vendors/iCheck/icheck.min.js"></script>
     <!-- Datatables -->
     <script src="vendors/datatables.net/js/jquery.dataTables.min.js"></script>
@@ -356,9 +356,9 @@
     <script src="vendors/pdfmake/build/pdfmake.min.js"></script>
     <script src="vendors/pdfmake/build/vfs_fonts.js"></script>
 		<!--Vue-->
-		<script type="text/javascript" src="../build/js/vue/vue.min.js" ></script>
+		<script type="text/javascript" src="build/js/vue/vue.js" ></script>
     <!-- Custom Theme Scripts -->
     <script src="build/js/custom.min.js"></script>
-
+		<script type="text/javascript" src="build/js/student.js" ></script>
   </body>
 </html>
