--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -65,6 +65,7 @@
 
     <script type="text/javascript" src="vendors/jquery/dist/jquery.min.js" ></script>
 		<script type="text/javascript" src="build/js/vue/vue.js" ></script>
+		<!--<script type="text/javascript" src="build/js/vue/vue-router.js" ></script>-->
 		<script type="text/javascript" src="build/js/login.js" ></script>
   </body>
 </html>
