--- a/src/main/resources/static/pages/index_student.html
+++ b/src/main/resources/static/pages/index_student.html
@@ -279,11 +279,11 @@
                       <tbody>
                         <tr v-for="data in datas">
                           <td>{{ data.courseName }}</td>
-                          <td>体育运动</td>
-                          <td>跆拳道社</td>
-                          <td>李四</td>
-                          <td>13322221111</td>
-                          <td>每周四晚六点</td>
+                          <td>{{ data.courseTag }}</td>
+                          <td>{{ data.organizationName }}</td>
+                          <td>{{ data.courseTag }}</td>
+                          <td>{{ data.courseTag }}</td>
+                          <td>{{ data.courseTag }}</td>
                           <td><a href="#">申请退课</a></td>
                         </tr>
                         <tr>
