--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>学生社团管理系统  </title>
+    <title>学生社团选课系统  </title>
 
     <!-- Bootstrap -->
     <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
         <div class="animate form login_form">
           <section class="login_content">
             <form id="form" method="post">
-              <h1>学生社团管理系统</h1>
+              <h1>学生社团选课系统</h1>
               <div>
                 <input type="text" class="form-control" placeholder="账号" required=""  name="username"/>
               </div>
@@ -52,7 +52,7 @@
                 <br />
 
                 <div>
-                  <h1><i class="fa fa-paw"></i> 欢迎使用学生社团管理系统！</h1>
+                  <h1><i class="fa fa-paw"></i> 欢迎使用学生社团选课系统！</h1>
                   <p>©2018 All Rights Reserved.</p>
                 </div>
               </div>
@@ -62,9 +62,28 @@
 
       </div>
     </div>
+			<div id="modal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog modal-sm">
+				<div class="modal-content">
 
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>
+                          </button>
+						<h4 class="modal-title" id="myModalLabel2">提示</h4>
+					</div>
+					<div id="message" class="modal-body">
+
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-warning" data-dismiss="modal">关闭</button>
+					</div>
+
+				</div>
+			</div>
+		</div>
     <script type="text/javascript" src="vendors/jquery/dist/jquery.min.js" ></script>
 		<script type="text/javascript" src="build/js/vue/vue.js" ></script>
+		<script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 		<!--<script type="text/javascript" src="build/js/vue/vue-router.js" ></script>-->
 		<script type="text/javascript" src="build/js/login.js" ></script>
   </body>
